--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 config.py
 /Vaction_Search/config.py
 /Weather_Database/config.py
+/Vaction_Itinerary/config.py
 #Adding additional files.
 API_practice.ipynb
 Google_Nearby_Search.ipynb
